--- a/python/tank/platform/qt/tank_form.ui
+++ b/python/tank/platform/qt/tank_form.ui
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>TankDialog</class>
- <widget class="QDialog" name="TankDialog">
+ <class>TankForm</class>
+ <widget class="QWidget" name="TankForm">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>785</width>
-    <height>492</height>
+    <width>483</width>
+    <height>363</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Form</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_3">
    <property name="spacing">
@@ -555,8 +555,8 @@ QLabel{
                   <rect>
                    <x>0</x>
                    <y>0</y>
-                   <width>359</width>
-                   <height>465</height>
+                   <width>335</width>
+                   <height>59</height>
                   </rect>
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_5">
